--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "babel src -d lib"
+    "start": "webpack serve --open",
+    "watch": "webpack --watch",
+    "babel": "babel src -d lib"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.10.0"
   }
 }
