--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "test": "jest",
     "start": "webpack serve --open",
     "watch": "webpack --watch",
     "babel": "babel src -d lib",
@@ -27,11 +28,15 @@
     "@babel/preset-env": "^7.18.10",
     "css-loader": "^6.7.1",
     "gh-pages": "^4.0.0",
+    "jest": "^28.1.3",
     "sass": "^1.54.3",
     "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
+  },
+  "dependencies": {
+    "jest-environment-jsdom": "^28.1.3"
   }
 }
